Add stores to businesses

--- a/src/components/Sidebar/styles.scss
+++ b/src/components/Sidebar/styles.scss
@@ -3,14 +3,24 @@
   height:100%;
   background-color: var(--darkgray);
   color:var(--white);
+  border-right:1px solid white;
+  .bu-sidebar{
+    display:flex;
+    align-items:center;
+  }
+  .icon{
+    display:block;
+  }
+  .add{
+    font-size:14px;
+    display:block;
+  }
   li{
     padding:15px;
     border-bottom:1px solid var(--white);
     &:hover{
       background-color: var(--lightred);
     }
-    &:first-child{
-      border-top:1px solid var(--white);
-    }
+   
   }
 }
