--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -1,7 +1,8 @@
 .nav-container{
   width:100%;
   background-color:var(--darkgray);
-  
+  border-bottom:1px solid white;
+
 }
 
 .navbar{
@@ -19,7 +20,7 @@
 #navbar-logo{
   color:var(--white);
   justify-self:start;
-  margin-left:20px;
+  padding-left:20px;
   cursor:pointer;
 }
 
