--- a/src/Layouts/MainLayout/styles.scss
+++ b/src/Layouts/MainLayout/styles.scss
@@ -2,15 +2,17 @@
   display:flex;
   flex-direction:column;
   height:100vh;
-  overflow:hidden;
+  overflow-y:hidden;
   .sidebarMenuAndContent{
     display:flex;
     flex-direction:row;
     flex:1;
-    overflow:auto;
+    overflow-y:hidden;
     .content{
       flex:1;
+      background-color: brown;
       height:100%;
+      overflow-y:auto;
       display:flex;
       flex-direction:column;
     }
