--- a/src/components/Sidebar/styles.scss
+++ b/src/components/Sidebar/styles.scss
@@ -1,9 +1,19 @@
 .sidebar{
   width:100px;
   height:100%;
+  display:flex;
+  flex-direction:column;
   background-color: var(--darkgray);
   color:var(--white);
   border-right:1px solid white;
+  overflow-y:hidden;
+  ul{
+    display:block;
+    flex:1;
+    overflow-y:auto;
+    background:black;
+    margin-bottom:10px;
+  }
   .bu-sidebar{
     display:flex;
     align-items:center;
@@ -16,6 +26,7 @@
     display:block;
   }
   li{
+    //display:block;
     padding:15px;
     border-bottom:1px solid var(--white);
     &:hover{
